--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<div class="logo">
-							<span class="icon fa-gem"></span>
+						<div class="">
+							<span class="fas fa-dungeon fa-5x"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
@@ -47,11 +47,11 @@
 							<article id="intro">
 								<h2 class="major">About Me</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Hi! I'm Tsvetelin (a.k.a Ceci), a game programmer and software engineering student from Bulgaria, and I've been making games since 13 and playing games from an even younger age. I published my first mobile game on Google Play in August, 2019. Currently I am in the last semester of my Software Engineering Bachelor program at <a href="https://en.via.dk/">VIA University College</a> in Denmark.</p>
+								<p>Hi! I'm Tsvetelin, a game programmer and software engineering student from Bulgaria, and I've been making games since 13 and playing games from an even younger age. I published my first mobile game on Google Play in August, 2019. Currently I am in the last semester of my Software Engineering Bachelor program at <a href="https://en.via.dk/">VIA University College</a> in Denmark.</p>
 								<p><a href="#projects">Here</a> you can see some of the projects I have had the opportunity to contribute to, and some personal projects that I have created myself.</p>
 								<h2 class="major">Personal Information</h2>
 								<p>Since I was 9 years old I have never lived in a single country more than 2 consecutive years. I was born in Serbia, although my parents are Bulgarian, and have lived in Bulgaria, South Africa, The United States, Greece, Denmark, and Jordan. This has taught me to constantly adapt to changes and has led me to become more open minded and empathetic.</p>
-								<p>If you feel like you need someone to talk to, you can hit me up to discuss anything. From game development, programming and emerging technologies, to life itself!</p>
+								<p>If you feel like you need someone to talk to, you can hit me up to discuss anything, from game development, programming and emerging technologies, to life itself!</p>
 							</article>
 
 						<!-- Work -->
@@ -65,9 +65,24 @@
 						<!-- About -->
 							<article id="projects">
 								<h2 class="major">Projects</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>Feel free to browse through the projects on which I have contributed and created myself.</p>
+								<span class="image main"><a href="#totow"><img src="images/totow01.png" alt="" /><h3>Tale of the Ocean World</h3></a></span>
+								<span class="image main"><a href="#elements"><img src="images/pic03.jpg"/><h3>Puzzle Game</h3></a></span>
 							</article>
+
+						<!-- TOTOW -->
+						<article id="totow">
+							<center><h2 class="major">Tale of the Ocean World</h2></center>
+							<ul class="alt">
+								<center><li><strong>Project Status:</strong>  Ongoing</li></center>
+								<center><li><strong>Project Type:</strong> Personal</li></center>
+								<center><li><strong>Project Duration:</strong> 6+ months</li></center>
+								<center><li><strong>Software Used:</strong> Unity3D, VS Code</li></center>
+								<center><li><strong>Languages Used:</strong> C#</li></center>
+							</ul>
+							<span class="image main"><img src="images/totow01.png" alt="" /></span>
+							<p>This project was created with an idea to help raise awareness about marine pollution. It is a mobile game available on Google Play.</p>
+						</article>
 
 						<!-- Contact -->
 							<article id="contact">
