--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Tsvetelin Dimitrov's Portfolio</h1>
-								<p>Software Engineering Student</p>
+								<p>[Software Engineering Student] / [Indie Game Developer]</p>
 							</div>
 						</div>
 						<nav>
@@ -47,25 +47,35 @@
 							<article id="intro">
 								<h2 class="major">About Me</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Hi! I'm Tsvetelin, a game programmer and software engineering student from Bulgaria, and I've been making games since 13 and playing games from an even younger age. I published my first mobile game on Google Play in August, 2019. Currently I am in the last semester of my Software Engineering Bachelor program at <a href="https://en.via.dk/">VIA University College</a> in Denmark.</p>
-								<p><a href="#projects">Here</a> you can see some of the projects I have had the opportunity to contribute to, and some personal projects that I have created myself.</p>
+								<p style="text-align: justify">Hi! I'm Tsvetelin, a game programmer and software engineering student from Bulgaria, and I've been making games since 13 and playing games from an even younger age. I published my first mobile game on Google Play in August, 2019. Currently I am in the last semester of my Software Engineering Bachelor program at <a href="https://en.via.dk/">VIA University College</a> in Denmark.</p>
+								<p style="text-align: justify"><a href="#projects"><strong>Here</strong></a> you can see some of the projects I have had the opportunity to contribute to, and some personal projects that I have created myself.</p>
 								<h2 class="major">Personal Information</h2>
-								<p>Since I was 9 years old I have never lived in a single country more than 2 consecutive years. I was born in Serbia, although my parents are Bulgarian, and have lived in Bulgaria, South Africa, The United States, Greece, Denmark, and Jordan. This has taught me to constantly adapt to changes and has led me to become more open minded and empathetic.</p>
-								<p>If you feel like you need someone to talk to, you can hit me up to discuss anything, from game development, programming and emerging technologies, to life itself!</p>
+								<p style="text-align: justify">Since I was 9 years old I have never lived in a single country more than 2 consecutive years. I was born in Serbia, although my parents are Bulgarian, and have lived in Bulgaria, South Africa, The United States, Greece, Denmark, and Jordan. This has taught me to constantly adapt to changes and has led me to become more open minded and empathetic.</p>
+								<p style="text-align: justify">If you feel like you need someone to talk to, you can hit me up to discuss anything, from game development, programming and emerging technologies, to life itself!</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p style="text-align: justify">I currently do not have any professional experience besides my internship during the 5th semester of my Bachelor program at VIA University College.</p>
+								<p style="text-align: justify">I had an opportunity to begin working for a software engineering company after my internship, but decided to focus on game development and work on a personal project.</p>
+								<h3>Internship</h3>
+								<ul class="alt">
+									<li><strong>Position: </strong> Software Engineering Intern</li>
+									<li><strong>Company: </strong> SevenGate LLC.</li>
+									<li><strong>Place: </strong> Amman, Jordan</li>
+									<li><strong>Period: </strong> July, 2018 - December, 2018</li>
+								</ul>
+								<p style = "text-align: justify"> VIA University College allows Software Engineering students to take an internship during their 5th semester, which is why I took the opportunity to move and work in Amman, Jordan.<br>During my internship I was in charge with executing delegated tasks from customers on time and with a high quality. I mainly focused on network security and internet protocols. I completed the internship training early and ahead of time, but decided to extend my training period for one more month. Throughout this period, I received two Sophos XG Firewall certiﬁcates, which can be found below.</p>
+								<p style="text-align: justify"> <a href="https://v6.netexam.com/certs/11017/D59A890594E14B109F3D2A030FA57A1589889.pdf">ET80 - XG Fiewall v17.0 - Engineer Certiﬁcate</a><i> - (10/2018 - Present)</i></p>
+								<p style="text-align: justify"> <a href="https://drive.google.com/file/d/1cvJuPb36cIR-VX3oDre6JncPQhT02GP6/view">S80 - XG Firewall v17.0 - Technician Certiﬁcate</a><i> - (11/2018 - Present)</i></p>
 							</article>
 
 						<!-- About -->
 							<article id="projects">
 								<h2 class="major">Projects</h2>
-								<p>Feel free to browse through the projects on which I have contributed and created myself.</p>
+								<p style="text-align: justify">Feel free to browse through the projects on which I have contributed and created myself.</p>
 								<span class="image main"><a href="#totow"><img src="images/totow01.png" alt="" /><h3>Tale of the Ocean World</h3></a></span>
 								<span class="image main"><a href="#elements"><img src="images/pic03.jpg"/><h3>Puzzle Game</h3></a></span>
 							</article>
@@ -81,7 +91,15 @@
 								<center><li><strong>Languages Used:</strong> C#</li></center>
 							</ul>
 							<span class="image main"><img src="images/totow01.png" alt="" /></span>
-							<p>This project was created with an idea to help raise awareness about marine pollution. It is a mobile game available on Google Play.</p>
+							<p style="text-align: justify">This project was created with an idea to help raise awareness about marine pollution. It is a mobile game available on Google Play.</p>
+						</article>
+
+						<!-- RESUME-->
+
+						<article id="resume">
+							<h2 class="major">Resume</h2>
+							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+							
 						</article>
 
 						<!-- Contact -->
