--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Tsvetelin Dimitrov's Portfolio</h1>
+								<h1>Tsvetelin Dimitrov</h1>
 								<p>[Software Engineering Student] / [Indie Game Developer]</p>
 							</div>
 						</div>
@@ -47,18 +47,26 @@
 							<article id="intro">
 								<h2 class="major">About Me</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p style="text-align: justify">Hi! I'm Tsvetelin, a game programmer and software engineering student from Bulgaria, and I've been making games since 13 and playing games from an even younger age. I published my first mobile game on Google Play in August, 2019. Currently I am in the last semester of my Software Engineering Bachelor program at <a href="https://en.via.dk/">VIA University College</a> in Denmark.</p>
-								<p style="text-align: justify"><a href="#projects"><strong>Here</strong></a> you can see some of the projects I have had the opportunity to contribute to, and some personal projects that I have created myself.</p>
-								<h2 class="major">Personal Information</h2>
-								<p style="text-align: justify">Since I was 9 years old I have never lived in a single country more than 2 consecutive years. I was born in Serbia, although my parents are Bulgarian, and have lived in Bulgaria, South Africa, The United States, Greece, Denmark, and Jordan. This has taught me to constantly adapt to changes and has led me to become more open minded and empathetic.</p>
-								<p style="text-align: justify">If you feel like you need someone to talk to, you can hit me up to discuss anything, from game development, programming and emerging technologies, to life itself!</p>
+								<p style="text-align: justify; margin-bottom:1em">Hi! I'm Tsvetelin, a game programmer and software engineering student from Bulgaria, and I've been making games since 13 and playing games from an even younger age. I published my first mobile game on Google Play in August, 2019. Currently I am in the last semester of my Software Engineering Bachelor program at <a href="https://en.via.dk/">VIA University College</a> in Denmark.</p>
+								<p style="text-align: justify; margin-bottom:2em"><a href="#projects"><strong>Here</strong></a> you can see some of the projects I have had the opportunity to contribute to, and some personal projects that I have created myself.</p>
+								<h3 class="major" style="margin-bottom: 1em">Personal Information</h3>
+								<p style="text-align: justify; margin-bottom:2em">Since I was 9 years old I have never lived in a single country more than 2 consecutive years. I was born in Serbia, although my parents are Bulgarian, and have lived in Bulgaria, South Africa, The United States, Greece, Denmark, and Jordan. This has taught me to constantly adapt to changes and has led me to become more open minded and empathetic.</p>
+								<h3 class="major" style="margin-bottom: 1em">Interests</h3>
+								<ul>
+									<li>Playing 2D platformer, real-time strategy, and ﬁghting video games</li>
+									<li>Playing Basketball</li>
+									<li>Watching Science-Fiction movies</li>
+									<li>Creating soundtracks</li>
+									<li>Drawing Pixel Art</li>
+								</ul>
+
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p style="text-align: justify">I currently do not have any professional experience besides my internship during the 5th semester of my Bachelor program at VIA University College.</p>
+								<p style="text-align: justify">I currently do not have any professional experience besides my internship during the 5th semester of my Bachelor program at <a href="https://en.via.dk/">VIA University College</a>.</p>
 								<p style="text-align: justify">I had an opportunity to begin working for a software engineering company after my internship, but decided to focus on game development and work on a personal project.</p>
 								<h3>Internship</h3>
 								<ul class="alt">
@@ -98,7 +106,34 @@
 
 						<article id="resume">
 							<h2 class="major">Resume</h2>
-							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+							<h3 class="major">Skills & Qualifications</h3>
+							<strong style="color: deepskyblue; padding-bottom: 1em">Coding</strong>
+							<div style="border: solid 0.1em #ffffff; border-radius: 0.7em">
+								<div style="padding-bottom: 0.2em; color:deepskyblue">
+									<code>C#</code><code>Java</code><code>C/C++</code><code>JavaScript</code><code>HTML5</code><code>CSS</code><code>PostgreSQL</code>
+								</div>
+							</div> <br>
+
+							<strong style="color:lightgreen; padding-bottom: 1em">Software</strong>
+							<div style="border: solid 0.1em #ffffff; border-radius: 0.7em">
+								<div style="padding-bottom: 0.2em; color:lightgreen">
+									<code>Unity3D</code><code>GIT</code><code>Visual Studio</code><code>VS Code</code><code>Aseprite</code> <code>Eclipse</code><code>Jupyter Notebook</code><code>Android Studio</code><code>MS Office</code>
+								</div>	
+							</div> <br>
+
+							<strong style="color:lightcoral; padding-bottom: 1em">Others</strong>
+							<div style="border: solid 0.1em #ffffff; border-radius: 0.7em">
+								<div style="padding-bottom: 0.2em; color:lightcoral">
+									<code>Computer Networking</code><code>AR/VR</code><code>Machine Learning</code><br><code>Algorithms and Data Structures</code><code>Design Patterns</code><br><code>Mobile Development</code><code>Agile Development Methodologies</code><br><code>Strong Communication Skills</code><code>Teamwork Skills</code><br><code>Experience shipping one mobile app to Google Play Store</code>
+								</div>	
+							</div> <br>
+
+							<h3 class="major" style="margin-bottom: 1em">Languages</h3>
+							<ul>
+								<li><strong>Bulgarian </strong> - Native</li>
+								<li><strong>English </strong> - Fluent</li>
+								<li><strong>Greek </strong> - Intermediate</li>
+							</ul>
 							
 						</article>
 
@@ -121,7 +156,7 @@
 										</div>
 									</div>
 									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
+										<li><a href="mailto:tsvetelin.dim@gmail.com?subject=Portfolio"><input type="submit" value="Send Message" class="primary" /></a></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
