--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<form method="post" action="mailto:tsvetelin.dim@gmail.com?subject=Portfolio">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -156,7 +156,7 @@
 										</div>
 									</div>
 									<ul class="actions">
-										<li><a href="mailto:tsvetelin.dim@gmail.com?subject=Portfolio"><input type="submit" value="Send Message" class="primary" /></a></li>
+										<li><input type="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
