Added Sorting Algorithms Project
- added sorting algorithms project
- added description for sorting algorithms page
- edited images

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 								<h2 class="major">Projects</h2>
 								<p style="text-align: justify">Feel free to browse through the projects on which I have contributed and created myself.</p>
 								<span class="image main"><a href="#totow"><img src="images/totow01.png" alt="" /><h3>Tale of the Ocean World</h3></a></span>
-								<span class="image main"><a href="#elements"><img src="images/pic03.jpg"/><h3>Puzzle Game</h3></a></span>
+								<span class="image main"><a href="#sortingAlgorithms"><img src="images/sortingAlgorithms.png"/><h3>Visualized Sorting Algorithms</h3></a></span>
 							</article>
 
 						<!-- TOTOW -->
@@ -100,6 +100,22 @@
 							</ul>
 							<span class="image main"><img src="images/totow01.png" alt="" /></span>
 							<p style="text-align: justify">This project was created with an idea to help raise awareness about marine pollution. It is a mobile game available on Google Play.</p>
+						</article>
+
+						<!-- SORTING ALGORITHMS -->
+						<article id="sortingAlgorithms">
+							<center><h2 class="major">Visualized Sorting Algorithms</h2></center>
+							<ul class="alt">
+								<center><li><strong>Project Status:</strong>  Complete</li></center>
+								<center><li><strong>Project Type:</strong> Personal</li></center>
+								<center><li><strong>Project Duration:</strong> ~1 week</li></center>
+								<center><li><strong>Software Used:</strong> VS Code</li></center>
+								<center><li><strong>Languages Used:</strong> JavaScript, p5.js</li></center>
+							</ul>
+							<span class="image main"><img src="images/sortingAlgorithms.png" alt="" /></span>
+							<p style="text-align: justify">I have studied algorithms and data structures in my 3rd semester, but as time passes knowledge seems to get forgotten. Instead of creating such algorithms to use in individual projects, programmers tend to use pre-existing libraries with these algorithms already implemented. When I started learning JavaScript I wanted to make sure I haven't forgotten about these algorithms and applied them to a small project. </p>
+							<p>I have implemented 3 sorting algorithms; Bubble sort, heap sort, and quick sort. The application starts with 1 unsorted array and depending on the algorithm you chose to use, the array will begin to visually get sorted with the set algorithm.</p>
+							<p>You can check out the project by clicking <a href="sortingAlgorithms/SortingAlgorithms_index.html">HERE</a></p>
 						</article>
 
 						<!-- RESUME-->
