--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
 							<ul class="alt">
 								<center><li><strong>Project Status:</strong>  Complete</li></center>
 								<center><li><strong>Project Type:</strong> Personal</li></center>
-								<center><li><strong>Project Duration:</strong> ~1 week</li></center>
+								<center><li><strong>Project Duration:</strong> ~2 days</li></center>
 								<center><li><strong>Software Used:</strong> VS Code</li></center>
-								<center><li><strong>Languages Used:</strong> JavaScript, p5.js</li></center>
+								<center><li><strong>Languages/Libraries Used:</strong> JavaScript, p5.js</li></center>
 							</ul>
 							<span class="image main"><img src="images/sortingAlgorithms.png" alt="" /></span>
-							<p style="text-align: justify">I have studied algorithms and data structures in my 3rd semester, but as time passes knowledge seems to get forgotten. Instead of creating such algorithms to use in individual projects, programmers tend to use pre-existing libraries with these algorithms already implemented. When I started learning JavaScript I wanted to make sure I haven't forgotten about these algorithms and applied them to a small project. </p>
-							<p>I have implemented 3 sorting algorithms; Bubble sort, heap sort, and quick sort. The application starts with 1 unsorted array and depending on the algorithm you chose to use, the array will begin to visually get sorted with the set algorithm.</p>
+							<p style="text-align: justify">I have studied algorithms and data structures in my 3rd semester, but as time passes knowledge seems to get forgotten. Instead of creating such algorithms to use in individual projects, programmers tend to use pre-existing libraries with these algorithms already implemented. When I started learning JavaScript, I wanted to make sure I haven't forgotten about these algorithms and applied them in a small project. </p>
+							<p>I have implemented three sorting algorithms: Bubble sort, heap sort, and quick sort. The application starts with one unsorted array and depending on the algorithm you choose to use, the array will begin to visually get sorted.</p>
 							<p>You can check out the project by clicking <a href="sortingAlgorithms/SortingAlgorithms_index.html">HERE</a></p>
 						</article>
 
