--- a/Dino-NEAT-ML/dino_index.html
+++ b/Dino-NEAT-ML/dino_index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>p5.js example</title>
+    <title>Box Jump AI using NEAT</title>
     <style> body {padding: 0; margin: 0;} </style>
     <script src="p5_lib/p5.js"></script>
     <script src="p5_lib/p5.dom.js"></script>
