--- a/index.html
+++ b/index.html
@@ -100,7 +100,15 @@
 								<center><li><strong>Languages Used:</strong> C#</li></center>
 							</ul>
 							<span class="image main"><img src="images/totow01.png" alt="" /></span>
-							<p style="text-align: justify">This project was created with an idea to help raise awareness about marine pollution. It is a mobile game available on Google Play.</p>
+							<p style="text-align: justify">This project was created with the idea to help raise awareness about marine pollution. It is a mobile game available on Google Play. Click <a href="https://play.google.com/store/apps/details?id=com.UFuture.TOTOW">HERE</a> to download</p>
+							<p style="text-align: justify">
+								Tale of the Ocean World is an endless runner game with pixel art graphics. It was targeted towards a young audience to teach them about marine pollution and the harm it inflicts on marine wildlife.
+							</p>
+							<p style="text-align: justify">
+								I used Unity3D and C# to create all the scripts and game logic, while drawing all of the assets in Aseprite. Throughout the development of the game I learned a lot about Scriptable Objects as many of the components needed to be created as such. Below is an example of the PowerUp scriptable object used in order to create all of the different power ups in the game.
+							</p>
+							<span class="image main"><img src="images/scriptableObject.png" alt="" /></span>
+							<span class="image main"><img src="images/powerUp.png" alt="" /></span>
 						</article>
 
 						<!-- SORTING ALGORITHMS -->
